--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: rhobbs <marvin@42.fr>                      +#+  +:+       +#+         #
+#    By: nmaila <marvin@42.fr>                      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2019/05/21 07:32:20 by rhobbs            #+#    #+#              #
-#    Updated: 2019/09/03 17:39:38 by RogerHobb        ###   ########.fr        #
+#    Created: 2019/05/21 07:32:20 by nmaila            #+#    #+#              #
+#    Updated: 2019/09/03 17:39:38 by nmaila           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
